--- a/template/root.tmpl
+++ b/template/root.tmpl
@@ -4,9 +4,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>{{template "title" .}}</title>
 	<link type="text/css" rel="stylesheet" href="/static/style.css">
+	<link rel="alternate" type="application/atom+xml" title="blog.golang.org - Atom Feed" href="http://blog.golang.org/feed.atom" />
 </head>
 <body>
 
