--- a/template/root.tmpl
+++ b/template/root.tmpl
@@ -87,6 +87,7 @@
 <script src="/static/jquery.js"></script>
 <script src="/static/play/playground.js"></script>
 <script src="/static/play/play.js"></script>
+<script src="/static/script.js"></script>
 </html>
 {{end}}
 
