go.blog: split blog server into a package and a command
Also add a "BasePath" configuration option, so that the blog
may be served under "/blog", for instance.

This is preparation to include the blog server in the binary
distributions of godoc.

R=r, dsymonds
CC=golang-dev
https://codereview.appspot.com/13737043

--- a/template/home.tmpl
+++ b/template/home.tmpl
@@ -5,5 +5,5 @@
 	{{range .Data}}
 		{{template "doc" .}}
 	{{end}}
-	<p>See the <a href="/index">index</a> for more articles.
+	<p>See the <a href="{{.BasePath}}/index">index</a> for more articles.
 {{end}}
