--- a/template/root.tmpl
+++ b/template/root.tmpl
@@ -15,7 +15,7 @@
 
 <div id="heading">
 	<a href="http://golang.org/"><img src="/static/logo.png"></a>
-	<a href="/">The Go Programming Language Blog</a>
+	<a href="{{.BasePath}}/">The Go Programming Language Blog</a>
 </div><!-- #heading -->
 
 <div id="sidebar">
@@ -61,8 +61,7 @@
 	</ul>
 	
 	<h1>Blog Archive</h1>
-	<p><a href="/index">Article index</a></p>
-	<!-- TODO(adg): list of recent articles here? -->
+	<p><a href="{{.BasePath}}/index">Article index</a></p>
 </div><!-- #sidebar -->
 
 <div id="content">
