go.blog: use godoc design, use blog package from go.tools
Also delete go.blog/pkg/blog and unused static files.

R=golang-dev, dsymonds
https://codereview.appspot.com/13754043

--- a/template/doc.tmpl
+++ b/template/doc.tmpl
@@ -31,7 +31,7 @@
 {{end}}
 
 {{define "section"}}
-  <h{{len .Number}} id="TOC_{{.FormattedNumber}}">{{.Title}}</h{{len .Number}}>
+  <h4 id="TOC_{{.FormattedNumber}}">{{.Title}}</h4>
   {{range .Elem}}{{elem $.Template .}}{{end}}
 {{end}}
 
