go.blog/template: only show line numbers when specified
R=golang-dev, r
https://codereview.appspot.com/13947043

--- a/template/root.tmpl
+++ b/template/root.tmpl
@@ -141,8 +141,8 @@
 <script>
 $(function() {
 	// Insert line numbers for all playground elements.
-	$('.playground').each(function() {
-		var $spans = $(this).find('> pre > span');
+	$('.playground > pre.numbers, .code > pre.numbers').each(function() {
+		var $spans = $(this).find('> span');
 
 		// Compute width of number column (including trailing space).
 		var max = 0;
