go.blog: fix Go Twitter link
R=golang-dev, dave
https://codereview.appspot.com/30000043

--- a/template/root.tmpl
+++ b/template/root.tmpl
@@ -98,7 +98,7 @@
 	<li><a href='http://groups.google.com/group/golang-nuts'>Go Mailing List</a></li>
 	<li><a href='https://plus.google.com/101406623878176903605'>Go on Google+</a></li>
 	<li><a href='https://plus.google.com/112164155169467723645/posts'>Go+ Community</a></li>
-	<li><a href='http://twitter.com/go_nuts'>Go on Twitter</a></li>
+	<li><a href='http://twitter.com/golang'>Go on Twitter</a></li>
 	</ul>
 	
 	<h4>Keep up with Google Developers</h4>
